[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/CityHUD/StatsWidget.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/city/places/shop.png" type="Texture" id=2]
[ext_resource path="res://assets/city/places/imperial-crown.png" type="Texture" id=3]
[ext_resource path="res://assets/backgrounds/medieval-port-0.jpg" type="Texture" id=4]
[ext_resource path="res://assets/city/places/beer-stein.png" type="Texture" id=5]
[ext_resource path="res://assets/city/places/bed-lamp.png" type="Texture" id=6]
[ext_resource path="res://assets/city/places/stone-crafting.png" type="Texture" id=7]
[ext_resource path="res://fonts/AkayaTelivigala-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/CityHUD/CityHUD.gd" type="Script" id=9]
[ext_resource path="res://scenes/CityHUD/CityPanel.gd" type="Script" id=10]
[ext_resource path="res://scenes/CityHUD/PalacePanel.gd" type="Script" id=11]
[ext_resource path="res://scenes/Dialog/DialogUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/CityHUD/HotelPanel.gd" type="Script" id=13]
[ext_resource path="res://scenes/GUI/TutorialUI.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Widget/Economy/EconomyWidget.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Widget/Statistic/StatisticPanel.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 25
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 25
use_filter = true
font_data = ExtResource( 8 )

[node name="CityHUD" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medieval-port-0" type="Sprite" parent="Background"]
position = Vector2( 511.533, 222.999 )
scale = Vector2( 0.858627, 0.858627 )
texture = ExtResource( 4 )

[node name="InfoPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="InfoPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_top = 30.0
margin_right = 63.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Stockholm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Population" parent="InfoPanel" instance=ExtResource( 1 )]
margin_top = 70.0
margin_bottom = 115.0
title = "Population"
number = "134294"

[node name="Economy" parent="InfoPanel" instance=ExtResource( 1 )]
margin_top = 110.0
margin_bottom = 155.0
title = "Economy"
number = "1880"

[node name="Defense" parent="InfoPanel" instance=ExtResource( 1 )]
margin_top = 150.0
margin_bottom = 195.0
title = "Defense"
number = "2000"

[node name="CityPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.196078 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 724.0
margin_bottom = 300.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palace" type="Button" parent="CityPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -56.0
margin_top = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="Button" parent="CityPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -330.0
margin_top = 150.0
margin_right = -218.0
margin_bottom = 256.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Button" parent="CityPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -330.0
margin_top = 300.0
margin_right = -218.0
margin_bottom = 406.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotel" type="Button" parent="CityPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -330.0
margin_top = 450.0
margin_right = -218.0
margin_bottom = 559.529
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shipyard" type="Button" parent="CityPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 220.0
margin_top = 150.0
margin_right = 332.0
margin_bottom = 256.0
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PalacePanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.196078 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 724.0
margin_bottom = 300.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvestButton" type="Button" parent="PalacePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 2 )
text = "Invest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="PalacePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_right = 70.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotelPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.196078 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 724.0
margin_bottom = 300.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OneNightButton" type="Button" parent="HotelPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -80.0
margin_right = 70.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 2 )
text = "One night"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecoverAllButton" type="Button" parent="HotelPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -20.0
margin_right = 70.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Recover all"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="HotelPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = 40.0
margin_right = 70.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogUI" parent="." instance=ExtResource( 12 )]
visible = false

[node name="TutorialUI" parent="." instance=ExtResource( 14 )]

[node name="EconomyWidget" parent="." instance=ExtResource( 15 )]

[node name="StatisticPanel" parent="." instance=ExtResource( 16 )]
margin_bottom = 123.0
[connection signal="pressed" from="CityPanel" to="." method="_on_CityPanel_pressed"]
[connection signal="pressed" from="CityPanel/Palace" to="CityPanel" method="_on_Palace_pressed"]
[connection signal="pressed" from="CityPanel/Bar" to="CityPanel" method="_on_Bar_pressed"]
[connection signal="pressed" from="CityPanel/Shop" to="CityPanel" method="_on_Shop_pressed"]
[connection signal="pressed" from="CityPanel/Hotel" to="CityPanel" method="_on_Hotel_pressed"]
[connection signal="pressed" from="CityPanel/Shipyard" to="CityPanel" method="_on_Shipyard_pressed"]
[connection signal="invest" from="PalacePanel" to="." method="_on_PalacePanel_invest"]
[connection signal="leave" from="PalacePanel" to="." method="_on_PalacePanel_leave"]
[connection signal="pressed" from="PalacePanel/InvestButton" to="PalacePanel" method="_on_InvestButton_pressed"]
[connection signal="pressed" from="PalacePanel/LeaveButton" to="PalacePanel" method="_on_LeaveButton_pressed"]
[connection signal="leave" from="HotelPanel" to="." method="_on_HotelPanel_leave"]
[connection signal="one_night" from="HotelPanel" to="." method="_on_HotelPanel_one_night"]
[connection signal="recover_all" from="HotelPanel" to="." method="_on_HotelPanel_recover_all"]
[connection signal="pressed" from="HotelPanel/OneNightButton" to="HotelPanel" method="_on_OneNightButton_pressed"]
[connection signal="pressed" from="HotelPanel/RecoverAllButton" to="HotelPanel" method="_on_RecoverAllButton_pressed"]
[connection signal="pressed" from="HotelPanel/LeaveButton" to="HotelPanel" method="_on_LeaveButton_pressed"]
[connection signal="dialog_played" from="DialogUI" to="." method="_on_DialogUI_dialog_played"]
